fix: align center animal card

--- a/partials/_animalCards.scss
+++ b/partials/_animalCards.scss
@@ -65,6 +65,7 @@
     #div-card{
         display: flex;
         flex-direction: column;
+        align-items: center;
         gap: 50px;
     }
 
